--- a/index.html
+++ b/index.html
@@ -16,24 +16,35 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&display=swap" rel="stylesheet">
+
+
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+
 </head>
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <h1>Kyle Bentle</h1>
-  <h2>UX designer.</h2>
+  <header class="hero">
+    <div class="hero__content">
+      <h1>Kyle Bentle</h1>
+      <h2>UX designer.</h2>
+    </div>
+  </header>
 
-  <p>Portfolio site in the works.</p>
-
-
-
-
-
+  <section>
+    <p>Portfolio site in the works.</p>
+    <p>In the meantime, follow me on:</p>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/kyle-bentle/" target="_blank">LinkedIn</a></li>
+      <li><a href="https://twitter.com/kylebentle" target="_blank">Twitter</a></li>
+    </ul>
+  </section>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
