--- a/index.html
+++ b/index.html
@@ -32,18 +32,62 @@
 
   <header class="hero">
     <div class="hero__content">
-      <h1>Kyle Bentle</h1>
-      <h2>UX designer.</h2>
+      <h1><span class='highlight'>Kyle Bentle</span> is a Midwest-based UX designer, researcher, data visualizer, and recovering journalist.</h1>
     </div>
   </header>
 
   <section>
-    <p>Portfolio site in the works.</p>
+    <p>Working at the intersection of <span class='highlight'>design and data</span>. Passionate about purposeful, data-focused user-centered design.</p>
+
+    <p>Portfolio site in the works. Reach out if you'd like to chat!</p>
     <p>In the meantime, follow me on:</p>
     <ul>
       <li><a href="https://www.linkedin.com/in/kyle-bentle/" target="_blank">LinkedIn</a></li>
       <li><a href="https://twitter.com/kylebentle" target="_blank">Twitter</a></li>
     </ul>
+
+    <h2>About Kyle</h2>
+
+    <p>Proficient in data visualization, interactive design, graphic design principles, user experience and user interface design, typography and written communication.</p>
+
+    <p>Experienced with Adobe Creative Suite, HTML/CSS, JavaScript, d3.js, geographic information systems, Microsoft Excel, Sketch, InVision, Adobe AfterEffects, Git and web content management systems.</p>
+
+    <div class='resume'>
+      <h3>History</h3>
+
+      <div class='resume__workplace'>
+        <p><strong>Openfield, UX Designer</strong><br><em>Cincinnati, Ohio. September 2019 to present</em></p>
+        <p>Creating world-class digital experiences for students and instructors in the education technology space.</p>
+        <ul>
+          <li>Work closely with stakeholders to guide product design, from ideation to validation.</li>
+          <li>Specializes in data visualization and dashboard/analytics design</li>
+          <li>Produce high-resolution designs and prototypes</li>
+          <li>Contribute to user research</li>
+          <li>Collaborate with team members, including presenting and critiquing work in daily design reviews</li>
+          <li>Support web developers throughout the development process</li>
+        </ul>
+      </div>
+
+      <div class='resume__workplace'>
+        <p><strong>Chicago Tribune, data visualization journalist</strong><br><em>Chicago, Illinois. March 2012 to September 2019</em></p>
+        <ul>
+          <li>Design and develop web presentations for chicagotribune.com, placing emphasis on clear and purposeful communication and a focus on user needs.</li>
+          <li>Produce data visualizations, charts, maps and other interactives. Analyze data to identify storylines and translate them into engaging graphics.</li>
+          <li>Manage the needs of multiple stakeholders and timelines while working with a multidisciplinary team.</li>
+        </ul>
+      </div>
+
+      <div class='resume__workplace'>
+        <p><strong>The Florida Times-Union and Jacksonville.com, graphic artist</strong><br><em>Jacksonville, Florida. May 2009 to March 2012</em></p>
+        <ul>
+          <li>Produced charts, maps and other graphics for the web and printed newspaper. Conceived and produced illustrations for entertainment, sports and special section covers.</li>
+        </ul>
+      </div>
+    </div>
+
+
+    
+
   </section>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
