--- a/index.html
+++ b/index.html
@@ -32,28 +32,24 @@
 
   <header class="hero">
     <div class="hero__content">
-      <h1><span class='highlight'>Kyle Bentle</span> is a Midwest-based UX designer, researcher, data visualizer, and recovering journalist.</h1>
+      <h1><strong>Kyle Bentle</strong> is a Midwest-based UX designer, researcher, data visualizer, and recovering journalist.</h1>
     </div>
   </header>
 
   <section>
-    <p>Working at the intersection of <span class='highlight'>design and data</span>. Passionate about purposeful, data-focused user-centered design.</p>
+    <p>Working at the intersection of design and data. Passionate about purposeful, data-focused user-centered design.</p>
 
     <p>Portfolio site in the works. Reach out if you'd like to chat!</p>
-    <p>In the meantime, follow me on:</p>
-    <ul>
-      <li><a href="https://www.linkedin.com/in/kyle-bentle/" target="_blank">LinkedIn</a></li>
-      <li><a href="https://twitter.com/kylebentle" target="_blank">Twitter</a></li>
-    </ul>
-
+    <p>In the meantime, follow me on <a href="https://www.linkedin.com/in/kyle-bentle/" target="_blank">LinkedIn</a>.</p>
+  
     <h2>About Kyle</h2>
 
     <p>Proficient in data visualization, interactive design, graphic design principles, user experience and user interface design, typography and written communication.</p>
 
-    <p>Experienced with Adobe Creative Suite, HTML/CSS, JavaScript, d3.js, geographic information systems, Microsoft Excel, Sketch, InVision, Adobe AfterEffects, Git and web content management systems.</p>
+    <p>Experienced with Figma, Sketch, Adobe Creative Suite, HTML/CSS, JavaScript, d3.js, geographic information systems, Microsoft Excel, InVision, Adobe AfterEffects, Git and web content management systems.</p>
 
     <div class='resume'>
-      <h3>History</h3>
+      <h2>History</h2>
 
       <div class='resume__workplace'>
         <p><strong>Openfield, UX Designer</strong><br><em>Cincinnati, Ohio. September 2019 to present</em></p>
