--- a/index.html
+++ b/index.html
@@ -32,28 +32,32 @@
 
   <header class="hero">
     <div class="hero__content">
-      <h1><strong>Kyle Bentle</strong> is a Midwest-based UX designer, researcher, data visualizer, and recovering journalist.</h1>
+      <h1><strong>Kyle Bentle</strong> is a lead UX designer working in the EdTech space, with a background in data visualization and storytelling..</h1>
     </div>
   </header>
 
   <section>
-    <p>Working at the intersection of design and data. Passionate about purposeful, data-focused user-centered design.</p>
-
+ 
     <p>Portfolio site in the works. Reach out if you'd like to chat!</p>
     <p>In the meantime, follow me on <a href="https://www.linkedin.com/in/kyle-bentle/" target="_blank">LinkedIn</a>.</p>
   
     <h2>About Kyle</h2>
 
-    <p>Proficient in data visualization, interactive design, graphic design principles, user experience and user interface design, typography and written communication.</p>
-
-    <p>Experienced with Figma, Sketch, Adobe Creative Suite, HTML/CSS, JavaScript, d3.js, geographic information systems, Microsoft Excel, InVision, Adobe AfterEffects, Git and web content management systems.</p>
 
     <div class='resume'>
-      <h2>History</h2>
+      <h3>History</h3>
+        
 
       <div class='resume__workplace'>
-        <p><strong>Openfield, UX Designer</strong><br><em>Cincinnati, Ohio. September 2019 to present</em></p>
-        <p>Creating world-class digital experiences for students and instructors in the education technology space.</p>
+        <p><strong>Openfield, UX Design Lead</strong><br><em>Cincinnati, Ohio. January 2022 to present</em></p>
+        <ul>
+          <li>Lead UX projects from discovery to implementation, managing a team of designers and collaborating with diverse array of stakeholders.</li>
+          <li>Maintain a positive relationship with client project teams, including product managers, research, engineering and customer service.</li>
+          <li>Mentor associate-level designers, focusing on ways to help them accomplish personal development goals through project work. Lead efforts to build and foster a design culture across a hybrid team.</li>
+          <li>Contribute insight articles to openfieldx.com.</li>
+        </ul>
+
+        <p><strong>Openfield, UX Designer</strong><br><em>Cincinnati, Ohio. September 2019 to January 2022</em></p> 
         <ul>
           <li>Work closely with stakeholders to guide product design, from ideation to validation.</li>
           <li>Specializes in data visualization and dashboard/analytics design</li>
@@ -91,11 +95,11 @@
   <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
+  <!-- <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script> -->
 </body>
 
 </html>
