Removes extra period in the hero

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <header class="hero">
     <div class="hero__content">
-      <h1><strong>Kyle Bentle</strong> is a lead UX designer working in the EdTech space, with a background in data visualization and storytelling..</h1>
+      <h1><strong>Kyle Bentle</strong> is a lead UX designer working in the EdTech space, with a background in data visualization and storytelling.</h1>
     </div>
   </header>
 
