--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&display=swap" rel="stylesheet">
 
 
@@ -32,7 +35,8 @@
 
   <header class="hero">
     <div class="hero__content">
-      <h1><strong>Kyle Bentle</strong> is a lead UX designer working in the EdTech space, with a background in data visualization and storytelling.</h1>
+      <h1>Kyle Bentle</h1> 
+      <p>Lead UX designer working in the EdTech space, with a background in data visualization and storytelling.</p>
     </div>
   </header>
 
@@ -46,7 +50,6 @@
 
     <div class='resume'>
       <h3>History</h3>
-        
 
       <div class='resume__workplace'>
         <p><strong>Openfield, UX Design Lead</strong><br><em>Cincinnati, Ohio. January 2022 to present</em></p>
@@ -84,9 +87,6 @@
         </ul>
       </div>
     </div>
-
-
-    
 
   </section>
 
