--- a/index.html
+++ b/index.html
@@ -40,15 +40,26 @@
     </div>
   </header>
 
+  <nav class="navbar">
+    <ul>
+      <li><a href="#about">About Kyle</a></li>
+      <!-- <li><a href="#Portfolio">Portfolio</a></li> -->
+      <li><a href="#resume">Resume</a></li>
+    </ul>
+  </nav>
+
   <section>
  
+    <h2 id="about">About Kyle</h2>
     <p>Portfolio site in the works. Reach out if you'd like to chat!</p>
-    <p>In the meantime, follow me on <a href="https://www.linkedin.com/in/kyle-bentle/" target="_blank">LinkedIn</a>.</p>
+    <p>In the meantime, connect with me on <a href="https://www.linkedin.com/in/kyle-bentle/" target="_blank">LinkedIn</a>.</p>
   
-    <h2>About Kyle</h2>
+    <!-- <h2 id="portfolio">Portfolio</h2> -->
 
-
+    <h2 id="resume">Resume</h2>
     <div class='resume'>
+
+      <!-- <h3>Skills</h3> -->
       <h3>History</h3>
 
       <div class='resume__workplace'>
@@ -87,6 +98,8 @@
         </ul>
       </div>
     </div>
+
+    <!-- <h3>Awards</h3> -->
 
   </section>
 
